package es.etg.daw.prog.mercadaw.model.exception;

public class BBDDException extends MercaDAWException {
    
}
