package es.etg.daw.prog.mercadaw.model.exception;

public class ExportException extends MercaDAWException {
    
}
