package es.etg.daw.prog.mercadaw.model.exception;

public class FicheroException extends MercaDAWException {
    
}
