package es.etg.daw.prog.mercadaw.model.exception;

public class FormatoException extends LectorException {
    
}
